# mcp-servers

./: .gitignore  README.md  mcp.json.template  pyproject.toml
src/mcp_servers/ping/: ping.py
src/mcp_servers/weather/: datamodels.py  weather.py
src/mcp_servers/weather/tests/: test_weather.py
src/mcp_servers/web-search/: web_search.py
src/mcp_servers/wikipedia-search/: search.py
