[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Enrico Erler", email = "enrico.erler@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.6",
    "httpx>=0.28.1",
    "mcp>=1.19.0",
    "polars>=1.34.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
]

[project.scripts]
mcp-servers = "mcp_servers:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]
